--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/netlify": "^5.5.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@auth/core": "^0.37.4",
     "astro": "^4.16.13",
+    "auth-astro": "^4.1.3",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
